Fix MemoryError when inferring f-string with large format width
Catch MemoryError in FormattedValue._infer() so that f-strings with
huge format widths (e.g. f'{0:11111111111}') yield Uninferable instead
of crashing.

The test uses an OOMInt subclass whose __format__ raises MemoryError,
avoiding the slow/OOM-inducing actual allocation.

Closes #2762

--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,11 @@ What's New in astroid 4.1.2?
 ============================
 Release date: TBA
 
+* Catch ``MemoryError`` when inferring f-strings with extremely large format
+  widths (e.g. ``f'{0:11111111111}'``) so that inference yields ``Uninferable``
+  instead of crashing.
+
+  Closes #2762
 
 
 What's New in astroid 4.1.1?
