Fix builtin functions incorrectly exposing descriptor attributes
Signed-off-by: Emmanuel Ferdman <emmanuelferdman@gmail.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,9 @@ What's New in astroid 4.2.0?
 ============================
 Release date: TBA
 
+* Fix ``FunctionModel`` returning descriptor attributes for builtin functions.
+
+  Closes #2743
 
 
 What's New in astroid 4.1.2?
